# wagtail-qrcode

./: .pre-commit-config.yaml  Makefile  pyproject.toml  tox.ini
.github/workflows/: test.yml
docs/: contrubute.md
wagtail_qrcode/templates/wagtail_qrcode/admin/: field.html  field_4.html  field_panel.html  usage_field.html  usage_field_4.html  usage_field_panel.html
